--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Nivo Slider is "The Most Awesome jQuery Image Slider". See http://nivo.dev7studios.com for more info.
+this is the repo for the Cruise Uk Website  
